Fix:добавление wrap

--- a/bundles/quests/quests.styl
+++ b/bundles/quests/quests.styl
@@ -55,6 +55,7 @@ heightCard = 95vh
       width: 100%;
       margin: 10px auto auto;
       font-size: 0.8em;
+      flex-wrap: wrap;
     }
   }
 
